
.. note::

   As of version 0.13.0, Flask-Restless supports Python 2.6, 2.7, and 3. Before
   that, it supported Python 2.5, 2.6, and 2.7.

.. note::

   As of version 0.6, Flask-Restless supports both pure SQLAlchemy and
   Flask-SQLAlchemy models. Before that, it supported only Elixir models.

Version 0.14.0-dev
------------------

Not yet released.

- #223: documents CORS example.
- #280: don't expose raw SQL in responses on database errors.
- #299: show error message if search query tests for ``NULL`` using comparison
  operators.
- #315: check for query object being ``None``.
- #324: :http:method:`delete` should only return :http:statuscode:`204` if
  something is actuall deleted.
- #325: support ``null`` inside ``has`` search operators.
- #328: enable automatic testing for Python 3.4.
- #333: enforce limit in :func:`helpers.count`.
- #338: catch validation exceptions when attempting to update relations.
- #339: use user-specified primary key on :http:method:`patch` requests.

Version 0.13.1
--------------

Released on April 21, 2014.

- #304: fixes mimerender bug due to how Python 3.4 handles decorators.

Version 0.13.0
--------------

Released on April 6, 2014.

- Allows universal preprocessors or postprocessors; see :ref:`universal`.
- Allows specifying which primary key to use when creating endpoint URLs.
- Requires SQLAlchemy version 0.8 or greater.
- #17: use Flask's :attr:`flask.Request.json` to parse incoming JSON requests.
- #29: replace custom ``jsonify_status_code`` function with built-in support
  for ``return jsonify(), status_code`` style return statements (new in Flask
  0.9).
- #51: Use `mimerender <http://mimerender.readthedocs.org>`_ to render
  dictionaries to JSON format.
- #247: adds support for making :http:method:`post` requests to dictionary-like
  association proxies.
- #249: returns :http:statuscode:`404` if a search reveals no matching results.
- #254: returns :http:statuscode:`404` if no related field exists for a request